@@ -1,0 +1,12 @@
+# reproduces a bug triggered by translation chaining and gdbserver
+# invalidation due to breakpoint, when there is a jump from a tranlation
+# block into itself.
+prog: self_invalidate
+vgopts: --tool=none --vgdb=yes --vgdb-error=0 --vgdb-prefix=./vgdb-prefix-nlself_invalidate
+stderr_filter: filter_stderr
+prereq: test -e gdb && ( ../tests/arch_test amd64 || ../tests/arch_test mips32 || ../tests/arch_test mips64 )
+progB: gdb
+argsB: --quiet -l 60 --nx ./self_invalidate
+stdinB: nlself_invalidate.stdinB.gdb
+stdoutB_filter: filter_make_empty
+stderrB_filter: filter_gdb
